# rococapturev2

./: .gitignore  README.md  RocoCaptureV2.spec  main.py  pyproject.toml  qt_main.py  requirements.txt  打包.bat
scripts/: build_release.ps1
src/: __about__.py  app.py  qt_app.py
src/assets/: icon_loader.py  season_loader.py
src/assets/seasons/: S1.json  S2.json
src/models/: constants.py  save_slot.py
src/qt_ui/: __init__.py  main_window.py  theme.py
src/services/: save_service.py
src/ui/: main_window.py
src/ui/components/: counter_display.py  element_pool_card.py  family_pool_card.py  log_panel.py  random_pool_card.py  shiny_detail_panel.py
src/ui/dialogs/: confirm_dialog.py  shiny_dialog.py
src/utils/: beep.py
