[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "RocoCaptureV2"
dynamic = ["version"]
description = "洛克王国异色保底追踪工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6==6.7.3",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[tool.setuptools.dynamic]
version = { attr = "src.__about__.__version__" }

[tool.setuptools.packages.find]
include = ["src*"]
